--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 <div class="nav-account ">
     
     <div class="account-icon border"><i class="fa-regular fa-user" style="color: #ffffff; "></i> 
-        <div class= "my-account"><a href="profile.html" >MY ACCOUNT</a> </div></div>
+        <div class= "my-account" onclick="window.location.href='profile.html'"><p>MY ACCOUNT</p></div></div>
 </div>
 
  <div class="select" > <select name="all" class="select-search">
@@ -62,15 +62,27 @@
 </div>
 </div>
 </header>
-
+<h1>Top Trending Fashion Looks</h1>
+<div class="vid">
+    
+    <div class="vid1">
+        <video src="korean - Made with Clipchamp.mp4" autoplay loop height="500px" width="300px"  ></video>
+    </div>
+    <div class="vid2">
+        <video src="indian.mp4" muted autoplay loop height="500px" width="300px"  ></video>
+    </div>
+    <div class="vid3">
+        <video src="Western.mp4" muted autoplay loop height="500px" width="300px" ></video>
+    </div>
+</div>
  <div class="hero-section">
 
     <div class="shoping-section">
   
   
-        <div class="box1 box " >
+<div class="box " >
 
-            <div class="box-containt">
+ <div class="box-containt">
     <h2> Crop tops</h2>
     <div class="box-img" style="background-image: url('crop\ top.jpg');"></div>
     <p>shop</p>
